# podcast-cli

./: .env.example  .gitignore  ENDPOINTDOCUMENTATION.md  INTEGRATION.md  README.md  TRANSCRIPTION_INTEGRATION.md  config.json  podcast_cli.py  pyproject.toml  requirements.txt  setup.py
examples/: batch_mixed.json  batch_rss.json  batch_simple.txt  minimal_setup_test.md  usage_examples.md
podcast_cli/: __init__.py  cli.py  cli_processor.py  hybrid_processor.py  output_manager.py  performance_tracker.py  remote_api_client.py  remote_processor.py
podcast_cli/models/downloaders/: rss_feed_downloader.py  yt_downloader.py
podcast_cli/models/managers/: __init__.py  task_manager.py
podcast_cli/models/summarizers/: openai_summarizer.py
podcast_cli/models/transcribers/: local_whisper_transcriber.py  salad_transcriber.py  whisper_transcriber.py
podcast_cli/utils/: validators.py
